--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Modulr.css Reset Module",
+  "name": "modulr-reset",
   "homepage": "https://github.com/ModulrCSS/reset",
   "authors": [
     "uloga <wpnemesis@gmail.com>"
